header section added with responsive

--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer-gears</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
+    <script src="https://kit.fontawesome.com/f3cbb5f5ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <h1 class="nav-title">Influencer products</h1>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log In</a></li>
+                <li class="hidden"><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li class="hidden"><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-description">
+                <h1 class="banner-title">Start your Journey as Influencer</h1>
+                <p class="banner-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed
+                    scelerisque eros. Lectus
+                    faucibus.</p>
+                <button class="banner-btn">Preebook now <i class="fa-solid fa-arrow-right-long"></i></button>
+            </div>
+            <div class="banner-image">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
 
 </body>
 
